--- a/dietexp1analysis.Rmd
+++ b/dietexp1analysis.Rmd
@@ -7,18 +7,19 @@ output: html_document
 ```{r setup, include=FALSE}
 
 
-library(tidyverse)
-library(dplyr)
-library(nlme)
-library(pwr)
-library(ggplot2)
-library(ggpubr)
-library(pear)
-library(compute.es)
+library("tidyverse")
+library("tidyr")
+library("dplyr")
+library("nlme")
+library("pwr")
+library("ggplot2")
+library("ggpubr")
+library("pear")
+library("compute.es")
 ```
 
 
-```{r cleaning data}
+```{r cleaning MORPH data}
 dietmorph <- read.csv("morphclean.csv")
 
 #averaging area for hindwings and forewings; calculating area asymmetry
@@ -45,6 +46,107 @@ dietmorph <- left_join(dietmorph, dietmorph %>% select(specimen,wing,asp.ratio) 
 
 dietmorph1 <- subset(dietmorph, wing=="LFW") #gets rid of duplicates
 dietmorph2 <- select(dietmorph1, -c(wing, area, length, breadth, roundness, asp.ratio)) #final product for analyses
+```
+```{r COLOR data}
+#cleaned/averaged by hand
+dietcolor <- read_csv("DietExp1_ColorClean.csv")
+dietcolor1 <- dietcolor[-48,] #this case is missing data
+```
+
+```{r DEVELOPMENT data}
+# Read Development Data
+ddata <- read.csv("Diet1DvlpDataClean.csv")
+ddata$Ins2<-as.Date(as.character(ddata$Ins2),format="%d-%b")  # fix the year problem
+ddata$Ins3<-as.Date(as.character(ddata$Ins3),format="%d-%b")
+ddata$Ins4<-as.Date(as.character(ddata$Ins4),format="%d-%b")
+ddata$Ins5<-as.Date(as.character(ddata$Ins5),format="%d-%b")
+ddata$HatchDate<-as.Date(as.character(ddata$HatchDate),format="%d-%b")
+ddata$PupDate<-as.Date(as.character(ddata$PupDate),format="%d-%b")
+ddata$EcloseDate<-as.Date(as.character(ddata$EcloseDate),format="%d-%b")
+summary(ddata)
+
+# Create response variables
+ddata.tidy<-gather(ddata, key="stage",value="date",-LarvID,-Diet,-FamLine,-Infection,-Dead,-Sex, -X)
+ddata.tidy$stage<-factor(ddata.tidy$stage,levels=c("HatchDate","Ins2", "Ins3","Ins4","Ins5","PupDate","EcloseDate"))
+ddata.tidy$stageNum<-as.numeric(ddata.tidy$stage)-1
+
+  
+larvae_ids<-unique(ddata.tidy$LarvID)
+# for each larva, calculate development rate metrics
+overall_DR<-c() #rate
+numDaysHatchToEclose<-c() #days
+hatchToIns5_DR<-c() #rate
+numDaysHatchToIns5<-c() #days
+pupation<-c() #days
+critical_period<-c() #days
+numDaysHatchtoPup <- c() #days
+hatch_ins2 <- c()
+ins2_ins3 <- c()
+ins3_ins4 <- c()
+ins4_ins5 <- c()
+
+
+for(i in 1:length(larvae_ids))
+{
+  larvaData<-ddata.tidy %>% filter(LarvID==larvae_ids[i])
+  # stages per day, all stages from Hatch to Eclose (or last stage reached)
+  #overall_DR[i]<- 1/coef(lm(stageNum~date,data=larvaData))[2] 
+  
+  # days from hatch to eclosure
+  numDaysHatchToEclose[i]<-larvaData$date[larvaData$stage=="EcloseDate"]-larvaData$date[larvaData$stage=="HatchDate"]
+  
+  # stages from Hatch to 5th instar (or last stage reached)
+  # hatchToIns5_DR[i]<-1/coef(lm(stageNum~date,data=larvaData %>% filter(stageNum<5)))[2] 
+  
+  # days from hatching to 5th instar
+  numDaysHatchToIns5[i]<-larvaData$date[larvaData$stage=="Ins5"]-larvaData$date[larvaData$stage=="HatchDate"]
+  
+  #duration of pupation
+  pupation[i]<-larvaData$date[larvaData$stage=="EcloseDate"]-larvaData$date[larvaData$stage=="PupDate"]
+  
+  #Period from 5th instar to pupa
+  critical_period[i]<-larvaData$date[larvaData$stage=="PupDate"]-larvaData$date[larvaData$stage=="Ins5"]
+  
+  #Hatch through pupation
+  numDaysHatchtoPup[i] <- larvaData$date[larvaData$stage=="PupDate"]-larvaData$date[larvaData$stage=="HatchDate"]
+  
+  #Instar moults
+  hatch_ins2[i] <- larvaData$date[larvaData$stage=="Ins2"]-larvaData$date[larvaData$stage=="HatchDate"]
+  ins2_ins3[i] <- ins2_ins3[i] <- larvaData$date[larvaData$stage=="Ins3"]-larvaData$date[larvaData$stage=="Ins2"]
+  ins3_ins4[i] <- ins3_ins4[i] <- larvaData$date[larvaData$stage=="Ins4"]-larvaData$date[larvaData$stage=="Ins3"]
+  ins4_ins5[i] <- ins4_ins5[i] <- larvaData$date[larvaData$stage=="Ins5"]-larvaData$date[larvaData$stage=="Ins4"]
+  
+}
+
+df<-data.frame(LarvID=larvae_ids,numDaysHatchToEclose=numDaysHatchToEclose,numDaysHatchToIns5=numDaysHatchToIns5,hatch_ins2 <-hatch_ins2, ins2_ins3=ins2_ins3, ins3_ins4=ins3_ins4, ins4_ins5=ins4_ins5, critical_period=critical_period, pupation=pupation, numDaysHatchtoPup=numDaysHatchtoPup)
+
+#put back into original data, remove comments column
+ddata<-left_join(ddata,df,by="LarvID")
+```
+
+```{r Merging data frames/creating pivot table}
+#change column name from 'LarvID' to 'specimen' in 'df' dataframe in order to merge dataframes by specimen
+names(ddata)[names(ddata)=="LarvID"] <- "specimen"
+names(dietcolor1)[names(dietcolor1)=="Specimen"] <- "specimen"
+#Merge dataframes -- morph and color with development rate
+totaldata <- merge(dietmorph2,dietcolor1, by="specimen")
+totaldata1 <- merge(totaldata,ddata, by="specimen")
+
+#Removing duplicate or unnecessary columns
+totaldata1$Diet.x <- NULL
+totaldata1$Diet.y <- NULL
+totaldata1$Sex.x <- NULL
+totaldata1$Sex.y <- NULL
+totaldata1$FamLine <- NULL
+totaldata1$Famline <- NULL
+totaldata1$Infection.x <- NULL
+totaldata1$Infection.y <- NULL
+totaldata1$X <- NULL
+totaldata1$Dead <- NULL
+
+totaldata1_pivot<-totaldata1 %>% pivot_longer(c("hatch_ins2....hatch_ins2","ins2_ins3" ,"ins3_ins4" ,"ins4_ins5","critical_period", "pupation"),names_to="stage_transition",values_to="duration")
+totaldata1_pivot$stage_transition<-factor(totaldata1_pivot$stage_transition,levels=c("hatch_ins2....hatch_ins2","ins2_ins3","ins3_ins4","ins4_ins5","critical_period", "pupation"))
+
 ```
 
 ```{r frequency tables}
@@ -180,9 +282,6 @@ anova(m10aov)
 
 
 ```{r color exploratory analyses}
-#cleaned/averaged by hand
-dietcolor <- read_csv("DietExp1_ColorClean.csv")
-dietcolor1 <- dietcolor[-48,] #this case is missing data
 
 c1<-gls(Redhue ~ Diet * Sex * Infection, data=dietcolor1) 
 c1aov <- aov(c1,type="marginal", data=dietcolor1)
@@ -377,47 +476,47 @@ group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(fore.area, na.rm=TRUE), sd=sd(fore.area, na.rm=TRUE))
 
 #forewing length
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(fore.length, na.rm=TRUE), sd=sd(fore.length, na.rm=TRUE))
 
 #forewing width
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(fore.width, na.rm=TRUE), sd=sd(fore.width, na.rm=TRUE))
 
 #forewing roundness
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(fore.round, na.rm=TRUE), sd=sd(fore.round, na.rm=TRUE))
 
 #forewing aspect ratio
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(fore.asp.ratio, na.rm=TRUE), sd=sd(fore.asp.ratio, na.rm=TRUE))
 
 #hindwing area
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(hind.area, na.rm=TRUE), sd=sd(hind.area, na.rm=TRUE))
 
 #hindwing length
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(hind.length, na.rm=TRUE), sd=sd(hind.length, na.rm=TRUE))
 
 #hindwing width
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(hind.width, na.rm=TRUE), sd=sd(hind.width, na.rm=TRUE))
 
 #forewing area asym
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(fore.area.asym, na.rm=TRUE), sd=sd(fore.area.asym, na.rm=TRUE))
 
 #forewing  length asym
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(fore.length.asym, na.rm=TRUE), sd=sd(fore.length.asym, na.rm=TRUE))
 
 #hindwing area asym
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(hind.area.asym, na.rm=TRUE), sd=sd(hind.area.asym, na.rm=TRUE))
 
 #hindwing length asym
-group_by(dietmorph2, diet) %>%
+group_by(dietmorph2, diet, sex) %>%
   summarise(count=n(), mean=mean(hind.length.asym, na.rm=TRUE), sd=sd(hind.length.asym, na.rm=TRUE))
 
 
@@ -450,6 +549,13 @@ group_by(maledata, diet) %>%
 
 group_by(femaledata, diet) %>%
   summarise(count=n(), mean=mean(Melarea, na.rm=TRUE), sd=sd(Melarea, na.rm=TRUE))
+
+#Black Density
+group_by(maledata, diet) %>%
+  summarise(count=n(), mean=mean(Blkdens, na.rm=TRUE), sd=sd(Blkdens, na.rm=TRUE))
+
+group_by(femaledata, diet) %>%
+  summarise(count=n(), mean=mean(Blkdens, na.rm=TRUE), sd=sd(Blkdens, na.rm=TRUE))
 ```
 
 ```{r partial effects plot}
